--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="static/index.css" />
   </head>
   <body>
-    {{template "chart.html" .}}
+    {{range .}} {{template "chart.html" .}} {{end}}
     <script type="module" src="static/js/main.js"></script>
   </body>
 </html>
