--- a/static/index.css
+++ b/static/index.css
@@ -13,9 +13,24 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+header {
+  width: 100%;
+  height: 10vh;
+}
+
+.content {
+  margin-inline: auto;
+}
+
+header ~ div {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-height: 90vh;
+}
+
 div:has(> canvas) {
   width: 800px;
-  margin-inline: auto;
   background-color: white;
 
   border-style: solid;
@@ -44,10 +59,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 button {
