--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MC Server Status</title>
-    <link rel="stylesheet" href="static/index.css" />
+    <link rel="stylesheet" href="/static/index.css" />
   </head>
   <body>
-    {{range .}} {{template "chart.html" .}} {{end}}
-    <script type="module" src="static/js/main.js"></script>
+    <header>
+      <button href="/" class="selected">Home</button>
+      <button href="/servers">Manage Servers</button>
+    </header>
+    <div>
+      {{range .}} {{template "chart.html" .}} {{end}}
+    <div>
+    <script type="module" src="/static/js/main.js"></script>
   </body>
 </html>
