--- a/static/index.css
+++ b/static/index.css
@@ -11,25 +11,52 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --highlight-color: #646cff;
 }
 
 header {
   width: 100%;
-  height: 10vh;
+  padding-inline: 20px;
+  box-sizing: border-box;
+}
+
+a {
+  font-weight: 500;
+  color: var(--highlight-color);
+  text-decoration: inherit;
+
+  padding-inline: 0.2em;
+  padding-block: 2px;
+
+  border-color: var(--highlight-color);
+  border-bottom-style: solid;
+  border-width: 3px;
+  border-radius: 3px;
+}
+
+a.selected {
+  border-color: #edf0ff;
+}
+
+a:hover {
+  color: #535bf2;
 }
 
 .content {
   margin-inline: auto;
+  margin-block: 20px;
 }
 
 header ~ div {
   margin: 0;
   display: flex;
+  flex-wrap: wrap;
   place-items: center;
   min-height: 90vh;
 }
 
-div:has(> canvas) {
+.chart {
   width: 800px;
   background-color: white;
 
@@ -41,20 +68,18 @@ div:has(> canvas) {
   padding: 5px;
 }
 
-div > p {
+.chart > p {
   color: black;
   text-align: center;
   font-size: 2rem;
   margin-block: 2px;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-block: 1em;
 }
 
 body {
@@ -73,7 +98,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: var(--highlight-color);
 }
 button:focus,
 button:focus-visible {
