--- a/servers/templates/servers-tr.html
+++ b/servers/templates/servers-tr.html
@@ -1,7 +1,13 @@
-<tr>
+<tr hx-target="this" hx-swap="outerHTML">
   <td>{{.Url}}</td>
   <td>{{.Port}}</td>
   <td>
-    <button>Edit</button>
+    <button hx-get="/servers/{{.Id}}/edit">Edit</button>
+    <button
+      hx-delete="/servers/{{.Id}}"
+      hx-confirm="Are you sure you want to delete this server?"
+    >
+      Delete
+    </button>
   </td>
 </tr>
