--- a/servers/templates/servers-tr.html
+++ b/servers/templates/servers-tr.html
@@ -2,9 +2,9 @@
   <td>{{.Url}}</td>
   <td>{{.Port}}</td>
   <td>
-    <button hx-get="/servers/{{.Id}}/edit">Edit</button>
+    <button hx-get="/servers/{{.ID}}/edit">Edit</button>
     <button
-      hx-delete="/servers/{{.Id}}"
+      hx-delete="/servers/{{.ID}}"
       hx-confirm="Are you sure you want to delete this server?"
     >
       Delete
