clients now update data in real time

--- a/templates/chart.html
+++ b/templates/chart.html
@@ -1,4 +1,4 @@
 <div class="chart content">
   <p>{{.Title}}</p>
-  <canvas data="{{.Data}}"></canvas>
+  <canvas data="{{.Data}}" server-id="{{.ID}}"></canvas>
 </div>
