Add latest changes

--- a/servers/templates/servers.html
+++ b/servers/templates/servers.html
@@ -23,6 +23,7 @@
             <tr>
               <th scope="col">URL</th>
               <th scope="col">Port</th>
+              <th scope="col"></th>
             </tr>
           </thead>
           <tbody>
