--- a/static/index.css
+++ b/static/index.css
@@ -75,11 +75,34 @@ header ~ div {
   margin-block: 2px;
 }
 
+table {
+  border-collapse: collapse;
+  border-radius: 3px;
+  border: 3px solid hsl(from white h s 25%);
+}
+
+td,
+th {
+  border: 1px solid hsl(from white h s 50%);
+  padding: 0.5em;
+}
+
 form {
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin-block: 1em;
+  margin-inline: auto;
+
+  width: 60%;
+
+  input {
+    margin-block: 0.25em;
+  }
+  > input {
+    width: 40%;
+    margin-inline: auto;
+  }
 }
 
 body {
